<resources>
    <string name="app_name">Android Challenge</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_label_principal">Principal</string>
    <string name="menu_label_aluno">Aluno</string>
    <string name="menu_label_informacoes">Informações</string>
    <string name="menu_label_configuracoes">Configurações</string>
    <string name="cd_logo_eduedu">Logo eduedu</string>
    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="btn_label_login">Login</string>
    <string name="btn_label_esqueci_senha">Esqueci senha</string>
    <string name="hint_label_nome">Nome</string>
    <string name="cd_avatar_selecionado">Avatar selecionado</string>
    <string name="btn_label_mudar_avatar">Mudar avatar</string>
    <string name="chk_box_label_autoriza_coleta_dados">Eu autorizo o EduEdu a coletar e processar os dados do meu filho(a) conforme a política de privacidade.</string>
    <string name="btn_label_salvar">Salvar</string>
    <string name="label_selecionar_aluno">Selecionar Aluno</string>
    <string name="hint_label_pesquisar">Pesquisar</string>
    <string name="label_filtrar_por">Filtrar por</string>
    <string name="cd_fechar">Fechar</string>
    <string name="label_toolbar_title_adicionar_aluno">Adicionar aluno</string>
    <string name="cd_adicionar_aluno">Adicionar aluno</string>
    <string name="btm_nav_item_label_inicio">Inicio</string>
    <string name="btm_nav_item_label_aluno">Aluno</string>
    <string name="btm_nav_item_label_ajuda">Ajuda</string>
    <string name="btm_nav_item_label_config">Configurações</string>
    <string name="tab_item_label_nome">Nome</string>
    <string name="tab_item_label_ano">Ano</string>
    <string name="toast_login_preencha_dados">Preencha os dois campos</string>
    <string name="cd_avatar">Avatar</string>
    <string name="label_aluno_ano">%1$dº ano</string>
    <string name="toast_salvar_crianca_preencha_nome">Informe o nome da criança</string>
    <string name="toast_salvar_crianca_politica_privacidade">Confirme com a política de privacidade</string>
    <string name="toast_algo_deu_errado">Ops! Algo deu errado. Tente novamente</string>
    <string name="args_navigation_esqueci_senha">args_navigation_esqueci_senha</string>
    <string name="toast_update_nao_trocou_avatar">Você ainda não trocou seu avatar!</string>
    <string name="label_esqueci_senha">Esqueceu a senha?</string>
    <string name="label_mensagem_esqueci_senha">Insira o e-mail cadastrado que enviamos um link para cria uma nova senha</string>
    <string name="hint_label_email">E-mail</string>
    <string name="btn_label_enviar_email">Enviar e-mail</string>
    <string name="edit_text_erro_email_invalido">Insira um e-mail válido</string>
    <string name="toast_cheque_seu_email">Enviado! Verifique seu e-mail</string>
    <string name="cd_resetar_senha_header">Resetar senha</string>
    <string name="label_sem_resultados_de_pesquisa">Nenhum resultado para a busca</string>
    <string name="edit_text_error_campo_obrigatorio">Campo obrigatório</string>
    <string name="label_config">Configurações</string>
    <string name="label_ajuda">Ajuda</string>
    <string name="label_bem_vindo">Bem vindo!</string>
    <string name="label_bem_vindo_mensagem">Agora que voce está logado você pode utilizar o app o quanto quiser ;)</string>
</resources>