<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BtmNavHostFragment">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_main_nav_host_fragmentContainer"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toTopOf="@+id/fragment_main_nav_host_btmNavigation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navGraph="@navigation/bottom_navigation_main_nav_graph" />

    <com.gauravk.bubblenavigation.BubbleNavigationConstraintView
        android:id="@+id/fragment_main_nav_host_btmNavigation"
        android:layout_width="0dp"
        android:layout_height="@dimen/btm_nav_container_default_height"
        app:bnc_mode="spread"
        android:paddingTop="12dp"
        android:background="@drawable/shape_main_btm_nav_conainer"
        android:paddingBottom="17dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >


        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/fragment_main_nav_host_bubbleInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:bt_active="true"
            style="@style/Theme.AndroidChallenge.BubbleNavItem"
            app:bt_icon="@drawable/ic_icon_inicio"
            app:bt_title="@string/btm_nav_item_label_inicio"/>

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/fragment_main_nav_host_bubbleAluno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Theme.AndroidChallenge.BubbleNavItem"
            app:bt_icon="@drawable/ic_icon_aluno"
            app:bt_title="@string/btm_nav_item_label_aluno" />


        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/fragment_main_nav_host_bubbleAjuda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Theme.AndroidChallenge.BubbleNavItem"
            app:bt_icon="@drawable/ic_icon_ajuda"
            app:bt_title="@string/btm_nav_item_label_ajuda" />

        <com.gauravk.bubblenavigation.BubbleToggleView
            android:id="@+id/fragment_main_nav_host_bubbleConfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Theme.AndroidChallenge.BubbleNavItem"
            app:bt_icon="@drawable/ic_icon_configuracao"
            app:bt_title="@string/btm_nav_item_label_config" />
    </com.gauravk.bubblenavigation.BubbleNavigationConstraintView>
</androidx.constraintlayout.widget.ConstraintLayout>