<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EsqueciSenhaFragment">

    <ImageView
        android:id="@+id/fragment_esqueci_senha_imageHeader"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/cd_resetar_senha_header"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_mark_email_read_24"
        app:layout_constraintDimensionRatio="H,16:6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/primary_color" />

    <TextView
        android:id="@+id/fragment_esqueci_senha_txtHeader"
        style="@style/Theme.AndroidChallenge.HeaderText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_esqueci_senha"
        android:textColor="@color/text_main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_esqueci_senha_imageHeader" />

    <TextView
        android:id="@+id/fragment_esqueci_senha_txtHeaderMensagem"
        style="@style/Theme.AndroidChallenge.MainText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/label_mensagem_esqueci_senha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_esqueci_senha_txtHeader" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_esqueci_senha_inputLayoutEmail"
        style="@style/Theme.AndroidChallenge.OutlinedTextInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_esqueci_senha_txtHeaderMensagem"
        app:layout_constraintVertical_bias="0.75">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_esqueci_senha_editEmail"
            style="@style/Theme.AndroidChallenge.EditText"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_label_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/fragment_esqueci_senha_btnEnviarEmail"
        style="@style/Theme.AndroidChallenge.UnfilledBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/btn_label_enviar_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="1.0" />

    <ProgressBar
        android:id="@+id/fragment_esqueci_senha_progressEnviandoEmail"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="87dp" />
</androidx.constraintlayout.widget.ConstraintLayout>